Fixed issue where certain index Slides were not clickable due to spacing on wide screens

--- a/src/components/EpisodeSelector/slide.module.css
+++ b/src/components/EpisodeSelector/slide.module.css
@@ -37,6 +37,7 @@
   cursor: pointer;
   filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.8));
   scale: 0.7;
+  pointer-events: none;
 }
 
 .play .triangle {
@@ -94,6 +95,7 @@
 }
 :global(.swiper-slide-active) .play {
   opacity: 1;
+  pointer-events: initial;
 }
 
 :global(.swiper-button-next) {
